# dash-polygon-app

./: .gitignore  Dockerfile  README.md  main.py  polygon_app.py  pyproject.toml  requirements.txt
assets/: mapbox_token  styles.css
components/: charts.py  map.py  sidebar.py
