[tool.poetry]
name = "dash-polygon-app"
version = "0.1.0"
description = ""
authors = ["Allan Ribeiro <ads_ribeiro@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dash = "^2.16.1"
polars = "^0.20.21"
dash-bootstrap-components = "^1.6.0"
geopandas = "^0.14.3"
dash-iconify = "^0.1.2"
pyarrow = "^15.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
